Got HTML page* working

--- a/my_app/templates/index.html
+++ b/my_app/templates/index.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-    <p>Welcome to my django project</p>
+    <p>Welcome to my first Django project</p>
+
+    <a href="products.html">Products Page</a>
 </body>
 </html>
