Got HTML pages working

--- a/my_app/templates/index.html
+++ b/my_app/templates/index.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-    <p>Welcome to my django project</p>
+  <p>Welcome to my first Django project</p>
 </body>
 </html>
