Index page and two linked html pages working, with css.
Fuck Django.

--- a/my_app/templates/index.html
+++ b/my_app/templates/index.html
@@ -7,6 +7,8 @@
 <body>
     <p>Welcome to my first Django project</p>
 
+    <a href="aboutMe.html">About Me</a><br>
+
     <a href="products.html">Products Page</a>
 </body>
 </html>
